# gmail-mcp-server

./: .gitignore  PUBLISHING.md  README.md  pyproject.toml
src/gmail_mcp/: gmail_client.py  server.py
src/sudo_gmail_mcp/: gmail_client.py  server.py
src/sudo_mcp_gmail/: server.py
tests/: test_draft_tools.py  test_message_builder.py  test_workflow_helpers.py
