[build-system]
requires = ["setuptools>=69", "wheel", "build"]
build-backend = "setuptools.build_meta"

[project]
name = "sudo-mcp-gmail"
version = "0.1.0"
description = "Python MCP server for Gmail drafts, sending, search, and mailbox workflows"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  {name = "Sahil Yadav"},
]
keywords = ["gmail", "mcp", "claude", "codex", "email", "python"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Email",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
  "mcp>=1.9.0",
  "google-api-python-client>=2.169.0",
  "google-auth>=2.40.1",
  "google-auth-oauthlib>=1.2.2",
  "requests>=2.32.0",
]

[project.urls]
Homepage = "https://github.com/sahilyadav902/sudo-mcp-gmail"
Repository = "https://github.com/sahilyadav902/sudo-mcp-gmail"
Issues = "https://github.com/sahilyadav902/sudo-mcp-gmail/issues"

[project.optional-dependencies]
dev = [
  "build>=1.2.2",
  "pytest>=9.0.0",
  "twine>=6.1.0",
]

[project.scripts]
sudo-mcp-gmail = "sudo_gmail_mcp.server:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
